# notemancy-console

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config_editor.rs  main.rs
src/app/: app.rs  command_palette.rs  core.rs  highlight.rs  mod.rs  ui.rs
