[package]
name = "notemancy-console"
version = "0.1.0"
authors = [""]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
notemancy-core = {version="0.1", path="../notemancy-core"}
futures = "0.3.31"
tokio = { version = "1.0", features = ["full" ] }
pulldown-cmark = "0.9"
syntect = "4.6.0"
once_cell = "1.17.1"
